deleted 'px' on zero values, fixed vertical alignment on social icons in footer, and other

--- a/src/components/advantages/styles.scss
+++ b/src/components/advantages/styles.scss
@@ -29,7 +29,7 @@
     width: 464px;
 
     &:hover {
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, .25);
+        box-shadow: 0 4px 4px rgba(0, 0, 0, .25);
     }
 
     @media (max-width: $md-up) {
@@ -38,23 +38,22 @@
 }
 
 .advantages__grid-box1 {
-    background-color: #b4ecde;
+    background: #b4ecde;
     padding: 95px 0;
 }
 
 .advantages__grid-box2 {
-    background-color: #a0d8eb;
+    background: #a0d8eb;
     padding: 50px 0 65px;
 }
 
 .advantages__grid-box3 {
-    background-image: url(images/advantages-box3-bg.png);
-    background-size: cover;
+    background: url(images/advantages-box3-bg.png) no-repeat 0 0 /cover;
     padding: 50px 0 65px;
 }
 
 .advantages__grid-box4 {
-    background-color: #f7dfe7;
+    background: #f7dfe7;
     padding: 95px 0;
 }
 
