--- a/src/components/contact/style.scss
+++ b/src/components/contact/style.scss
@@ -1,7 +1,7 @@
 @import "src/styles/variables.scss";
 
 .contact__wrapper {
-    background: url(images/contact-bg.png) center bottom no-repeat;
+    background: url(images/contact-bg.png) no-repeat center bottom;
     width: 100%;
     padding: 90px 0 60px;
 }
@@ -37,7 +37,7 @@
     width: 370px;
     border-radius: 30px;
     min-height: 20px;
-    background-color: #fff;
+    background: #fff;
     padding: 10px 15px;
 
     @media (max-width: $md-up) {
@@ -64,6 +64,6 @@
     margin: 0;
     padding: 0;
     border: none;
-    background: url(images/arrow-blue.png) no-repeat 100% 100%;
+    background: url(images/arrow-blue.png) 100% 100% no-repeat;
     cursor: pointer;
 }
