--- a/src/components/footer/styles.scss
+++ b/src/components/footer/styles.scss
@@ -1,7 +1,7 @@
 @import "src/styles/variables.scss";
 
 .footer__wrapper {
-    background: rgba(250, 236, 140,.5);
+    background: rgba(250, 236, 140, .5);
     padding: 0 0 50px;
 }
 
@@ -21,7 +21,6 @@
 
     @media (max-width: $sm-up) {
         flex-direction: column;
-        align-items: center;
     }
 }
 
@@ -29,16 +28,18 @@
     display: flex;
     overflow: hidden;
     list-style: none;
-    display: flex;
-    padding: 0;
-    margin: 0;
     width: 215px;
     justify-content: space-between;
     padding: 0 50px 0 0;
+    align-items: center;
 
     @media (max-width: $sm-up) {
         padding: 20px 0;
     }
+}
+
+.footer__links-rights__socials__img-link {
+    display: flex;
 }
 
 .footer__links-rights__copyright {
