--- a/src/components/services/styles.scss
+++ b/src/components/services/styles.scss
@@ -41,7 +41,7 @@
         .button--outlined {
             text-align: center;
             color:#fff;
-            background-color: $btn-solid-color;
+            background: $btn-solid-color;
             box-shadow: none;
             }    
 }
@@ -71,5 +71,5 @@
 
 .services__columnbox__column__textbox-button {
     border: 1px solid #ddd;
-    box-shadow: 0px 8px 16px rgba(255, 255, 255, .5);
+    box-shadow: 0 8px 16px rgba(255, 255, 255, .5);
 }
